@@ -6,6 +6,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 ## [Unreleased] - <>
 ### Added 
 - Updated keyboard shortcuts dialog to reflect all usable shortcuts
+- Undo button becomes disabled if there are no un-doable actions
 
 ## [v0.7.2] - 2020-05-06
 ### Changed
